# motion-matrix

./: 180913_김성훈.pptx  20180807_FMA_김영호_MotionMatrix_v01.xlsx  LICENSE.md  README.md  임양규_SIGCHIPaperFormat_working.docx  임양규_논문정리.xlsx
APISource/: CMakeLists.txt  Comparision.cpp  Comparision.h  README.md  Robot_Xsens.cpp  XsensConnection.cpp  XsensConnection.h  quaternion.cpp
APISource/Source/: Comparision.cpp  Robot_Xsens.cpp  XsensConnection.cpp  quaternion.cpp  tgaload.cpp
APISource/database/Wide/: UFormFile.csv
APISource/include/: Comparision.h  quaternion.h
APISource/include/Xsens/: xstypes.h
APISource/include/Xsens/xscontroller/: xscontrollerconfig.h
APISource/include/Xsens/xsensdeviceapi/: xdaconfig.h  xscalibrateddatamode.h  xscallbackplainc.h  xscoordinatesystem.h  xsdevice.h  xsdeviceparameter.h  xsdeviceptrarray.h  xsicccommand.h  xsoption.h  xsselftestresult.h
OpenGL-MotionSphere/: CMakeLists.txt  README.md
OpenGL-MotionSphere/Source/: Comparision.cpp  Main.cpp  Robot_Xsens.cpp  SphereUtility.cpp  XsensConnection.cpp  quaternion.cpp
OpenGL-MotionSphere/database/: FormFile.txt  UFormFile.csv
OpenGL-MotionSphere/database/Close/: LFormFile.csv
OpenGL-MotionSphere/database/Standard/: LFormFile.csv  UFormFile.csv
OpenGL-MotionSphere/include/: Comparision.h  SphereUtility.h  XsensConnection.h  quaternion.h
OpenGL-MotionSphere/include/Xsens/: xscontroller.h  xsensdeviceapi_csharp.h
OpenGL-MotionSphere/include/Xsens/xsensdeviceapi/: xscontrol.h  xsdef.h  xsdeviceptrlist.h  xsdevicestate.h  xsfilterprofilearray.h  xsorientationmode.h  xsprotocoltype.h  xsrejectreason.h  xsresetmethod.h  xsscanner.h
OpenGL-MotionSphere/include/Xsens/xstypes/: xstypesconfig.h
OpenGL-MotionSphere/lib/: xsensdeviceapi64.lib
OpenIA/: CMakeLists.txt
OpenIA/Source/: iaAcquireGesture.cpp  iaGesture.cpp  iaJointposdata.cpp  iaMain.cpp  iaMotionAuthoring.cpp  iaMotionSphere.cpp  iaPositionTracking.cpp  iaQuaternion.cpp  iaSphereUtility.cpp  iaVitruvianAvatar.cpp
OpenIA/Source/externLib/: Model_PLY.cpp  Model_PLY.h  VelodyneCapture.h  XsensConnection.cpp  XsensConnection.h
OpenIA/data/: Right_Hand.ply  elbow.ply
OpenIA/data/RotationData/: ExpertFormFile.txt  FormFile.txt  FormFileRaw.txt  NewMotionData.txt
OpenIA/data/Sensed Unit Motion Data/: CH_UM04.txt
OpenIA/data/Sensed Unit Motion Data/Chest Segment/: CH_UM01.txt  CH_UM02.txt  CH_UM03.txt
OpenIA/data/Sensed Unit Motion Data/Left Arm Segment/: LHL_UM06.txt  LHS_UM05.txt  LJL_UM02.txt  LJS_UM01.txt  LSL_UM04.txt  LSS_UM03.txt  LUHL_UM08.txt  LUHS_UM07.txt
OpenIA/data/Sensed Unit Motion Data/Left Foot Segment/: LF_UM01.txt  LF_UM02.txt  LF_UM03.txt  LF_UM04.txt  LF_UM05.txt  LF_UM06.txt  LF_UM07.txt  LF_UM08.txt  LF_UM09.txt  LF_UM10.txt  LF_UM11.txt  LF_UM12.txt  LF_UM13.txt  LF_UM14.txt  LF_UM15.txt  LF_UM16.txt
OpenIA/data/Sensed Unit Motion Data/Right Arm Segment/: RHL_UM06.txt  RHS_UM05.txt  RJL_UM02.txt  RJS_UM01.txt  RSL_UM04.txt  RSS_UM03.txt  RUHL_UM08.txt  RUHS_UM07.txt
OpenIA/data/Sensed Unit Motion Data/Right Foot Segment/: RF_UM01.txt  RF_UM02.txt  RF_UM03.txt  RF_UM04.txt  RF_UM05.txt  RF_UM06.txt  RF_UM07.txt  RF_UM08.txt  RF_UM09.txt  RF_UM10.txt  RF_UM11.txt  RF_UM12.txt  RF_UM13.txt  RF_UM14.txt  RF_UM15.txt  RF_UM16.txt
OpenIA/data/avtar/: LeftHand.mtl  Lowpoly Model.mtl  RightHand.mtl  humanHead.mtl
OpenIA/data/ms/: Left_foot.ply  RiggedLeftHand.ply  Right_foot.ply  elbow2.ply
OpenIA/include/: iaAcquireGesture.h  iaGesture.h  iaJointposdata.h  iaMotionAuthoring.h  iaMotionSphere.h  iaPositionTracking.h  iaQuaternion.h  iaSphereUtility.h  iaVitruvianAvatar.h
OpenIA/include/Xsens/: xsmutex.h
OpenIA/include/Xsens/xsensdeviceapi/: xdadll.h  xdainfo.h  xsaccesscontrolmode.h  xsalignmentframe.h  xscallback.h  xscomcallbackoptions.h  xsconnectivitystate.h  xsdeviceconfiguration.h  xsdeviceoptionflag.h  xsdeviceparameteridentifier.h  xsdeviceptr.h  xsdeviceref.h  xserrormode.h  xsfilterprofile.h  xsfilterprofilelist.h  xsfloatformat.h  xsgnssplatform.h  xsiccrepmotionresult.h  xsnmeastringtype.h  xsoperationalmode.h  xsprocessingflag.h  xsusbhubinfo.h
OpenIA/include/Xsens/xsensdeviceapi_csharp/: xsensdeviceapi.h
OpenIA/lib/: xstypes64.lib
Source/: RobotMotion.cpp  XsensConnection.cpp  XsensConnection.h
VTK-MotionSphere/: README.md
presentation/: 180813김성훈.pptx  20180807_FMA_김영호_MotionMatrix_v02.xlsx  20190227_001_나예.docx  20190227_001_성훈.pptx  201903_논문정리_임양규.pptx  HwpForm_1.hwp  MotionMatrix_v01.xlsx  README.md  SIGCHIPaperFormat_working_eng.docx  SIGCHIPaperFormat_한글_20180918.docx  SIGCHIPaperFormat_한글_20181005.docx  SW스타랩-오나예(0830).docx  로테이션매트릭스.hwp  로테이션매트릭스_1023.hwp  로테이션매트릭스_1031.hwp  로테이션매트릭스_1102.hwp  발표.pptx  임양규_논문정리.xlsx
